--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-airbnb": "^3.0.3",
     "css-reset-and-normalize": "^1.0.1",
+    "feather-icons": "^4.7.3",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
