--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "slick-carousel": "^1.8.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
@@ -18,6 +19,7 @@
     "@vue/eslint-config-airbnb": "^3.0.3",
     "css-reset-and-normalize": "^1.0.1",
     "feather-icons": "^4.7.3",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
