--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "webpack --mode production",
+    "lint": "vue-cli-service lint",
+    "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "slick-carousel": "^1.8.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
@@ -25,6 +27,19 @@
     "style-resources-loader": "^1.2.1",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0"
-  }
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.9"
+  },
+  "description": "```\r npm install\r ```",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miranda90/wepeat-front.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/miranda90/wepeat-front/issues"
+  },
+  "homepage": "https://github.com/miranda90/wepeat-front#readme"
 }
